# direct-damages-workflow

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
demo/input/admin/: level01.gpkg  level01.parquet
demo/input/assets/raw/: tza_airports_polygons.geoparquet  tza_railway_edges.geoparquet  tza_roads_bridges_and_culverts_nodes.geoparquet
demo/input/assets/tza_airports_polygons/: dar_es_salaam.geoparquet
demo/input/assets/tza_railway_edges/: dar_es_salaam.geoparquet
demo/input/assets/tza_roads_bridges_and_culverts_nodes/: dar_es_salaam.geoparquet
demo/input/config/: subregions.txt
demo/input/config/design_standards/: cyclone.csv
demo/input/config/rehab_costs/: cyclone.csv
demo/input/hazards/aligned/: cyclone_2010_historical_rp00010.tif  cyclone_2010_historical_rp00025.tif  cyclone_2010_historical_rp00050.tif  cyclone_2010_historical_rp00250.tif  cyclone_2010_historical_rp00250.tif.aux.xml  cyclone_2010_historical_rp01000.tif
demo/input/hazards/raw/: _reference.tif  cyclone_2010_historical_rp00025.tif  cyclone_2010_historical_rp00050.tif  cyclone_2010_historical_rp00250.tif  (+1 more)
src/direct_damages/: __init__.py  naming.py
src/direct_damages/intersections/: __init__.py  linestrings.py  points.py  polygons_fast.py  utils.py
workflow/: Snakefile  config.yaml
workflow/rules/: assets.smk  hazards.smk  risk.smk  risk_archive.smk
workflow/scripts/: align_rasters.py  expectations.py  intersections.py  intersections_check.py  process_input_edges.py  process_input_nodes.py  process_input_polygons.py  verify_intersections.py
(+14 files in other folders)
